example/ingress/test1/manifest-2-0.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: web2
  name: web2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web2
  template:
    metadata:
      labels:
        app: web2
    spec:
      containers:
      - image: gcr.io/google-samples/hello-app:2.0
        name: hello-app
        resources:
          limits:
            cpu: 40m
            memory: 300Mi
          requests:
            cpu: 20m
            memory: 200Mi
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: web2
  name: web2
spec:
  ports:
  - name: "8080"
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: web2
  type: ClusterIP
